# daarion-edge-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
app/: __init__.py  main.py
docs/: API_DAARION_CITY_DEPLOY_RUNBOOK.md  EDGE_BACKEND_HEALTH_CONTRACT.md  REPOSITORY_ROLE.md
docs/architecture/: DAARION_EDGE_REPOSITORY_BOUNDARY_DECISION_2026-07.md  DAARION_PLATFORM_MULTINODE_ARCHITECTURE_2026-07.md
docs/operations/: API_DAARION_CITY_NODA3_DEPLOYMENT_PLAN.md  NODA3_NODA4_OCTELIUM_STACK_AUDIT_2026-07-03.md
tests/: test_health.py
